--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,15 @@ services:
     entrypoint: ["mpi_bootstrap", "role=master", "mpi_master_service_name=master", "mpi_worker_service_name=worker"]
     ports:
       - "${SSH_PORT}:22"
-    # networks:
-    #   - net
+    networks:
+      - net
 
   worker:
     image: $REGISTRY_ADDR:$REGISTRY_PORT/$IMAGE_NAME
     user: root
     entrypoint: ["mpi_bootstrap", "role=worker", "mpi_master_service_name=master", "mpi_worker_service_name=worker"]
-    # networks:
-    #   - net
+    networks:
+      - net
 
-# networks:
-# net:
+networks:
+    net:
