Update Makefile. Fix Matrix::qr(). Update README.md.

--- a/HPCLibrary/Makefile
+++ b/HPCLibrary/Makefile
@@ -3,7 +3,7 @@
 # 06/07/2017
 # Makefile for HPC-Library.
 #
-LANG		= -std=c++11 # -Wc++11-extensions
+LANG		= -std=c++17 # -Wc++11-extensions
 
 CXX		= c++
 GPU		= nvcc
@@ -14,8 +14,8 @@ CPPFLAGS	+= -MD -MP
 PICKY		= -g -Wall # -Wextra -pedantic
 
 CXXFLAGS	= $(LANG) $(OPTS)
-UGTFLAGS	= $(LANG) $(OPTS) -lgtest
-GPUFLAGS	= $(LANG)
+UGTFLAGS	= -lgtest -lgtest_main -lpthread
+GPUFLAGS	= -std=c++11
 MPIFLAGS	= $(LANG) $(OPTS) # $(PICKY)
 
 INC_PATH	= inc
@@ -30,26 +30,26 @@ UGT_PATH 	= tests/unittests
 INCLUDES	= -I ./$(INC_PATH)
 
 VPATH 		:= src tests obj inc
-HEADERS	= $(wildcard inc/*.hpp)
+HEADERS		= $(wildcard inc/*.hpp)
 TESTS		= $(shell find tests/ ! -name "mpi*.cpp" -name "*.cpp" ! -name "*unittests.cpp")
 MPI_TESTS 	= $(wildcard tests/mpi/*.cpp)
 GPU_TESTS	= $(wildcard tests/gpu/*.cu)
 UNIT_TESTS	= $(wildcard tests/unittests/*.cpp)
-SOURCES	= $(wildcard src/*.cpp)
+SOURCES		= $(wildcard src/*.cpp)
 
 # $(info $$TESTS is [${TESTS}])
 
-CLASSES	= $(patsubst %.cpp, $(OBJ_PATH)/%.o, $(notdir $(SOURCES)))
+CLASSES		= $(patsubst %.cpp, $(OBJ_PATH)/%.o, $(notdir $(SOURCES)))
 BENCH 		= $(patsubst %.cpp, $(OBJ_PATH)/%.o, $(notdir $(TESTS)))
 MPI_BENCH 	= $(patsubst %.cpp, $(OBJ_PATH)/%.o, $(notdir $(MPI_TESTS)))
 GPU_BENCH	= $(patsubst %.cu, $(OBJ_PATH)/%.o, $(notdir $(GPU_TESTS)))
 GTEST		= $(patsubst %.cpp, $(OBJ_PATH)/%.o, $(notdir $(UNIT_TESTS)))
 
-OBJECTS	= $(CLASSES) $(BENCH) $(MPI_BENCH) $(GPU_BENCH) $(GTEST)
-TARGETS	= $(notdir $(BENCH))
+OBJECTS		= $(CLASSES) $(BENCH) $(MPI_BENCH) $(GPU_BENCH) $(GTEST)
+TARGETS		= $(notdir $(BENCH))
 MPI_TARGETS	= $(notdir $(MPI_BENCH))
 GPU_TARGETS	= $(notdir $(GPU_BENCH))
-GTEST_TARGETS  = $(notdir $(GTEST))
+GTEST_TARGETS 	= $(notdir $(GTEST))
 PCHS		= $(notdir $(HEADERS:=.gch))
 
 EXECS		= $(TARGETS:.o=)
@@ -64,7 +64,7 @@ classes 	 : $(CLASSES)
 precomp_headers : $(PCHS)
 
 $(EXECS)	 :
-		  $(CXX) $(CXXFLAGS) $(INCLUDES) $^ -o $(EXE_PATH)/$@
+		  $(CXX) $(CXXFLAGS) $(INCLUDES) $^ -o  $(EXE_PATH)/$@
 
 $(MPI_EXECS)	 :
 		  $(MPI) $(MPIFLAGS) $(INCLUDES) $^ -o $(EXE_PATH)/$@
@@ -73,7 +73,7 @@ $(GPU_EXECS)	 :
 		  $(GPU) $(GPUFLAGS) $(INCLUDES) $^ -o $(EXE_PATH)/$@
 
 $(GTEST_EXECS)	 :
-		  $(CXX) $(LANG) $(OPTS) $(INCLUDES) $^ -lgtest -o $(EXE_PATH)/$@
+		  $(CXX) $(LANG) $(OPTS) $(INCLUDES) $^ $(UGTFLAGS) -o $(EXE_PATH)/$@
 
 $(OBJ_PATH)/%.o : %.cpp
 		  $(CXX) -c $(CXXFLAGS) $(INCLUDES) $< -o $@
@@ -88,7 +88,7 @@ $(OBJ_PATH)/%.o : $(GPU_PATH)/%.cu
 		  $(GPU) -c $(GPUFLAGS) $(INCLUDES) $< -o $@
 
 $(OBJ_PATH)/%.o : $(UGT_PATH)/%.cpp
-		  $(CXX) -c $(UGTFLAGS) $(INCLUDES) $< -o $@
+		  $(CXX) -c $(LANG) $(OPTS) $(UGTFLAGS) $(INCLUDES) $< -o $@
 
 %.hpp.gch	: %.hpp
 		  $(CXX) $(LANG) -x c++-header $< -o $(GCH_PATH)/$@
@@ -103,15 +103,15 @@ csrbench		: csrbench.o CSR.o Vector.o
 densebench		: densebench.o Matrix.o Vector.o
 main			: main.o Matrix.o Vector.o
 sparsebench		: sparsebench.o COO.o Vector.o
-mpi2norm_driver	: mpi2norm_driver.o Vector.o
+mpi2norm_driver		: mpi2norm_driver.o Vector.o
 mpi2norm_timer		: mpi2norm_timer.o Vector.o
 mpiHeatEq2D-CG		: mpiHeatEq2D-CG.o Grid.o Laplacian.o
 mpiHeatEq2D-IR		: mpiHeatEq2D-IR.o Grid.o Laplacian.o
-mpi_hello_world	: mpi_hello_world.o
+mpi_hello_world		: mpi_hello_world.o
 gpu_densebench		: gpu_densebench.o Matrix.o Vector.o
 unittests		: unittests.o CSC.o Matrix.o Vector.o
 
-bench.o		: bench.cpp AOS.hpp CSC.hpp COO.hpp Vector.hpp
+bench.o			: bench.cpp AOS.hpp CSC.hpp COO.hpp Vector.hpp
 csrbench.o		: csrbench.cpp CSR.hpp Vector.hpp
 densebench.o		: densebench.cpp Matrix.hpp
 main.o			: main.cpp Matrix.hpp
