Update Makefile object rules. Rerrange test/unittests.cpp fixtures causing std::cout/segmentation fault.

--- a/HPCLibrary/Makefile
+++ b/HPCLibrary/Makefile
@@ -13,10 +13,10 @@ OPTS		= -Ofast -march=native -DNDEBUG -D_THREADING -pthread
 CPPFLAGS	+= -MD -MP
 PICKY		= -g -Wall # -Wextra -pedantic
 
-CXXFLAGS	= $(LANG) $(OPTS)
+CXXFLAGS	= $(LANG)$(OPTS)
 UGTFLAGS	= -lgtest -lgtest_main -lpthread
 GPUFLAGS	= -std=c++11
-MPIFLAGS	= $(LANG) $(OPTS) # $(PICKY)
+MPIFLAGS	= $(LANG)$(OPTS) # $(PICKY)
 
 INC_PATH	= inc
 LIB_PATH	= lib
@@ -115,23 +115,23 @@ mpi_hello_world		: mpi_hello_world.o
 gpu_densebench		: gpu_densebench.o Matrix.o Vector.o
 unittests		: unittests.o CSC.o Matrix.o Vector.o
 
-bench.o			: bench.cpp AOS.hpp CSC.hpp COO.hpp Vector.hpp
-csrbench.o		: csrbench.cpp CSR.hpp Vector.hpp
-densebench.o		: densebench.cpp Matrix.hpp Vector.hpp
-main.o			: main.cpp Matrix.hpp
-sparsebench.o		: sparsebench.cpp COO.hpp Vector.hpp
-mpi2norm_timer.o	: mpi/mpi2norm_timer.cpp Vector.hpp
-mpi2norm_driver.o	: mpi/mpi2norm_driver.cpp Vector.hpp
-mpiHeatEq2D-CG.o	: mpi/mpiHeatEq2D-CG.cpp Grid.hpp Laplacian.hpp
-mpiHeatEq2D-IR.o	: mpi/mpiHeatEq2D-IR.cpp Laplacian.hpp
-mpi_hello_world.o	: mpi/mpi_hello_world.cpp
-gpu_densebench.o	: gpu/gpu_densebench.cu
-unittests.o		: unittests/unittests.cpp Matrix.hpp Vector.hpp
-AOS.o			: AOS.hpp Vector.hpp
-COO.o			: COO.hpp Vector.hpp
-CSC.o			: CSC.hpp Vector.hpp
-CSR.o			: CSR.hpp Vector.hpp
-Matrix.o		: Matrix.hpp Vector.hpp
-Vector.o		: Vector.hpp
-Laplacian.o		: Laplacian.hpp
-Grid.o			: Grid.hpp
+obj/bench.o			: bench.cpp AOS.hpp CSC.hpp COO.hpp Vector.hpp
+obj/csrbench.o		: csrbench.cpp CSR.hpp Vector.hpp
+obj/densebench.o		: densebench.cpp Matrix.hpp Vector.hpp
+obj/main.o			: main.cpp Matrix.hpp
+obj/sparsebench.o		: sparsebench.cpp COO.hpp Vector.hpp
+obj/mpi2norm_timer.o	: mpi/mpi2norm_timer.cpp Vector.hpp
+obj/mpi2norm_driver.o	: mpi/mpi2norm_driver.cpp Vector.hpp
+obj/mpiHeatEq2D-CG.o	: mpi/mpiHeatEq2D-CG.cpp Grid.hpp Laplacian.hpp
+obj/mpiHeatEq2D-IR.o	: mpi/mpiHeatEq2D-IR.cpp Laplacian.hpp
+obj/mpi_hello_world.o	: mpi/mpi_hello_world.cpp
+obj/gpu_densebench.o	: gpu/gpu_densebench.cu
+obj/unittests.o		: unittests/unittests.cpp Matrix.hpp Vector.hpp
+obj/AOS.o			: AOS.hpp Vector.hpp
+obj/COO.o			: COO.hpp Vector.hpp
+obj/CSC.o			: CSC.hpp Vector.hpp
+obj/CSR.o			: CSR.hpp Vector.hpp
+obj/Matrix.o		: Matrix.hpp Vector.hpp
+obj/Vector.o		: Vector.hpp
+obj/Laplacian.o		: Laplacian.hpp
+obj/Grid.o			: Grid.hpp
